# bili-flow

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  run-dev.bat  run-dev.ps1
.github/workflows/: ci.yml
admin_backend/: __init__.py  api.py  auth.py  configs.py  crud.py  deps.py  log_reader.py  main.py  rbac.py  schemas.py
admin_backend/routers/: __init__.py  llm.py  qteasy.py  rbac.py
app/: queue_worker.py  runtime_queue_worker.py  runtime_scheduler.py  scheduler.py
app/models/: database.py
app/modules/: bailian_asr.py  bilibili.py  bilibili_auth.py  downloader.py  dynamic.py  dynamic_summary.py  feishu_docs.py  podcast_summary.py  processor.py  push.py  qwen3_asr_local.py  subtitle.py  (+5 more)
demo/: asr_dashscope.py  funasr_test.py  prompt.txt
docs/: FLOW.md  MANAGE_SUBSCRIPTIONS.md  QUICK_REFERENCE.md  WINDOWS_INSTALLER.md  prompt.md  prompt_dynamic.md  prompt_podcast.md  qteasy_api_contract.md
entrypoints/: __init__.py  dev-stack.py  entrypoint-backend.py  entrypoint-docker.py  entrypoint-scheduler.py  entrypoint.py  launcher.py
packaging/: backend.spec  installer.iss  launcher.spec  scheduler.spec
scripts/: backfill_video_transcript_text.py  build_frontend.ps1  build_installer.ps1  build_pyinstaller.ps1  clear_uploader_videos.py  download_video.py  init_runtime_configs.sql  init_setup.py  manage-stack.ps1  manage_subscriptions.py  migrate_add_doc_url.py  migrate_add_folder_mapping_and_rules.py  migrate_sqlite_to_postgresql.py  postgresql_schema.sql  pre-push.sh  probe_xiaoyuzhou_chain.py  run-local.ps1  set_refresh_token.py  setup-hooks.sh  setup_windows.ps1
tests/: README.md  conftest.py  test_asr.py  test_asr_compare.py  test_bilibili.py  test_downloader.py  test_feishu_channel.py  test_feishu_docs.py  test_feishu_docs_integration.py  test_full_flow_integration.py  test_llm_client.py  test_llm_integration.py  test_manual_push_tasks.py  test_processor_continue.py  test_processor_multi_model.py  test_prompt.py  test_push.py  test_qteasy_router.py  test_subtitle.py  test_xiaoyuzhou_sdk.py
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
(+70 files in other folders)
